# xi

./: Cargo.toml  history.txt  test.js  test.xi
src/: builtin.rs  context.rs  dict.rs  env.rs  error.rs  expr.rs  function.rs  interpreter.rs  lexer.rs  list.rs  main.rs  parser.rs  report.rs  resolver.rs  token.rs  value.rs
src/builtin/: dict.rs  io.rs  list.rs  mod.rs  seq.rs  time.rs
tests/: array.xi  dict.xi  fibo.js  fibo.xi  list.xi
