[package]
name = "xi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
miette = { version = "5.5.0", features = ["fancy"] }
rustyline = "10.0.0"
thiserror = "1.0.37"
